--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -590,7 +590,7 @@
 
     {{- /* VERIFY FORM */ -}}
       <form class="position-relative fs16 text-center d-hide" id="verifyForm" autocomplete="off">
-        <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+        <div class="form-closer"><span class="ico-cross"></span></div>
         <div class="py-1 text-center fs18 position-relative header buygreen-bg" id="vHeader">
           <span id="vBuySell"></span> <span data-unit="base"></span>
         </div>
@@ -820,7 +820,7 @@
       </form>
 
       <form id="approveTokenForm" class="position-relative flex-center flex-column fs20 d-hide">
-        <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+        <div class="form-closer"><span class="ico-cross"></span></div>
         <div class="px-2 py-1 text-center fs22 text-nowrap sans-light position-relative">
           [[[:title:Approve]]] <span id="approveTokenSymbol"></span>
         </div>
