--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -120,7 +120,7 @@
 
     {{- /* EXPORT SEED AUTHORIZATION */ -}}
     <form class="d-hide" id="exportSeedAuth">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="py-1 text-center position-relative fs22 sans-light">
         [[[Export Seed]]]
       </div>
@@ -139,7 +139,7 @@
 
     {{- /* SEED DISPLAY */ -}}
     <form class="d-hide" id="authorizeSeedDisplay">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="fs18 sans-light text-center mb-2">[[[dont_share]]]</div>
       <div class="my-2 p-2 flex-center">
         <pre class="fs18 mono mx-auto select-all" id="seedDiv"></pre>
