--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -421,7 +421,7 @@
 
     {{- /* SEND */ -}}
     <form class="pb-3 d-hide" id="sendForm" autocomplete="off">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="py-1 flex-center position-relative fs24 sans-light">
         [[[Send]]]
         <img id="sendLogo" class="mini-icon mx-2">
@@ -481,7 +481,7 @@
 
     {{- /* Verify Send */ -}}
     <form class="pb-3 d-hide" id="vSendForm">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="py-1 text-center position-relative header fs22 sans-light">
       [[[confirm]]]
        <img id="vSendLogo" class="micro-icon mx-1">
@@ -550,7 +550,7 @@
 
     {{- /* RECONFIGURE WALLET */ -}}
     <form class="d-hide" id="reconfigForm" autocomplete="off">
-      <div class="form-closer recfg-form hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="py-1 text-center position-relative fs22 sans-light">
         [[[Reconfigure]]]
         <img id="recfgAssetLogo" class="micro-icon mx-1">
@@ -620,7 +620,7 @@
 
     {{- /* MANAGE PEERS */ -}}
     <form class="d-hide" id="managePeersForm">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center position-relative fs22 sans-light">
         [[[manage_peers]]]
       </div>
@@ -654,7 +654,7 @@
 
     {{- /* UNAPPROVE TOKEN VERSIONS TABLE FORM */ -}}
     <form class="d-hide" id="unapproveTokenTableForm">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center position-relative fs22 sans-light">
         [[[unapprove_token_for]]]
       </div>
@@ -681,7 +681,7 @@
 
     {{- /* UNAPPROVE SPECIFIC TOKEN VERSION FORM */ -}}
     <form class="position-relative flex-center flex-column fs20 d-hide" id="unapproveTokenForm">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center fs22 text-nowrap sans-light position-relative">
         [[[unapprove_token_version]]]
       </div>
@@ -708,7 +708,7 @@
 
     {{- /* CONFIRM FORCE FORM */ -}}
     <form class="d-hide" id="confirmForce">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center position-relative fs22 sans-light">
         [[[wallet_actively_used]]]
       </div>
@@ -724,7 +724,7 @@
 
     {{- /* RECOVER WALLET AUTHORIZATION */ -}}
     <form class="d-hide" id="recoverWalletConfirm">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center position-relative fs22 sans-light">
         [[[recover_wallet]]]
       </div>
@@ -743,7 +743,7 @@
 
     {{- /* EXPORT WALLET AUTHORIZATION */ -}}
     <form class="d-hide" id="exportWalletAuth">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="py-1 text-center position-relative fs22 sans-light">
         [[[export_wallet]]]
       </div>
@@ -765,7 +765,7 @@
 
     {{- /* RESTORE WALLET INFO */ -}}
     <form class="d-hide" id="restoreWalletInfo">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center position-relative fs22 sans-light">
         [[[export_wallet]]]
       </div>
@@ -795,14 +795,14 @@
 
     {{- /* Error Modal */ -}}
     <form id="errorModal" class="d-hide mw-425">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="fs22 text-center">[[[Error]]]</div>
       <div id="errorModalMsg" class="fs16 errcolor my-2 text-center"></div>
     </form>
 
     {{- /* PICK A VOTING SERVICE PROVIDER */ -}}
     <form id="vspPicker" class="flex-center flex-column p-2 m-4">
-      <div class="form-closer hoverbg">
+      <div class="form-closer">
         <span class="ico-cross"></span>
       </div>
       <div class="fs24 sans-light">[[[select_vsp_from_list]]]</div>
@@ -840,7 +840,7 @@
 
     {{- /* PURCHASE TICKETS */ -}}
     <form id="purchaseTicketsForm" class="flex-center flex-column p-2 m-4 mw-425">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="flex-center fs22 sans-light">[[[Purchase Tickets]]]</div>
       <div class="d-flex pt-2 flex-wrap">
         <div class="flex-center flex-column col-12 p-4">
@@ -878,7 +878,7 @@
 
     {{- /* TICKET HISTORY */ -}}
     <form id="ticketHistoryForm" class="flex-center flex-column align-items-stretch p-2 m-4">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="flex-center fs28 sans-light mb-2">[[[Ticket History]]]</div>
       <table id="ticketHistoryTable" class="fs14">
         <thead>
@@ -913,7 +913,7 @@
 
     {{- /* SET VOTES */ -}}
     <form id="votingForm" class="flex-center flex-column p-2 m-4 mw-425">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
 
       {{- /* AGENDAS */ -}}
       <div class="flex-center fs28 sans-light mb-2 w-100 brdrtop">[[[Agendas]]]</div>
