--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -356,11 +356,29 @@ a[data-tmpl=walletCfgGuide] {
 }
 
 .order-opt {
+  opacity: 0.7;
+
+  &:not(.selected) {
+    cursor: pointer;
+  }
+
+  &.selected {
+    opacity: 1;
+    background-color: #e8ebed;
+
+    div.opt-check {
+      background-color: #2cce9c;
+    }
+  }
+}
+
+.slider-container,
+.order-opt {
   border: 1px solid #424242;
   border-radius: 3px;
   padding: 4px;
   margin-top: 8px;
-  opacity: 0.7;
+  opacity: 0.9;
 
   div.opt-check {
     width: 15px;
@@ -392,19 +410,6 @@ a[data-tmpl=walletCfgGuide] {
       background-color: #2cce9c;
       border: 2px solid #424242;
       cursor: pointer;
-    }
-  }
-
-  &:not(.selected) {
-    cursor: pointer;
-  }
-
-  &.selected {
-    opacity: 1;
-    background-color: #e8ebed;
-
-    div.opt-check {
-      background-color: #2cce9c;
     }
   }
 }
