--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -68,7 +68,14 @@
                 <span data-tmpl="baseSymbol"></span>-<span data-tmpl="quoteSymbol"></span>
               </div>
             </td>
-            <td data-tmpl="botType"></td>
+            <td>
+              <span data-tmpl="botType" class="me-1"></span>
+              <span data-tmpl="cexLink" class="d-hide">
+                <span class="fs16 ico-exchange me-1"></span>
+                <img data-tmpl="cexLogo" class="micro-icon">
+                <span data-tmpl="cexName"></span>
+              </span>
+            </td>
             <td data-tmpl="baseBalanceTd"><span data-tmpl="baseBalance"></span><img class="mx-1 micro-icon" data-tmpl="baseBalanceLogo"></td>
             <td data-tmpl="quoteBalanceTd"><span data-tmpl="quoteBalance"></span><img class="mx-1 micro-icon" data-tmpl="quoteBalanceLogo"></td>
             <td class="text-end hoverbg pointer" data-tmpl="removeTd"><span class="ico-cross fs20 p-2 red"></span></td>
@@ -96,7 +103,7 @@
 
     {{- /* APP PASSWORD */ -}}
     <form id="pwForm" class="d-flex flex-column align-items-stretch">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div>
         <label for="pwInput" class="form-label pt-3 ps-1 mb-1">[[[App Password]]]</label>
         <input type="password" class="form-control select" id="pwInput" autocomplete="off">
@@ -117,7 +124,7 @@
       {{- /* ABSOLUTELY-POSITIONED CUSTOM ASSET SELECT */ -}}
       <div id="assetDropdown" class="position-absolute d-flex flex-column align-items-stretch d-hide"></div>
 
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="bordertop py-2 text-center fs22 sans-light position-relative" data-tmpl="header">
         [[[add_new_bot_market]]]
       </div>
