implement simple arb. move market selection to mmsettings
Adapt to new configuration style and new rebalance settings.

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -116,7 +116,18 @@ div.clear {
 
 div.feature,
 button.feature {
+  cursor: pointer;
   background-color: #6bc5ff;
+
+  &:hover {
+    background-color: #a3dbff;
+  }
+}
+
+button.selected {
+  background-color: #38cfb0;
+  border: none;
+}
 
   &:hover {
     background-color: #a3dbff;
