Clickable tx and order links in notes/pokes

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -71,6 +71,10 @@
           <div class="fs15 px-1 flex-grow-1" data-tmpl="details"></div>
           <span class="note-time"></span>
         </div>
+        <div class="fs15 px-1">
+          <span data-tmpl="subject"></span>
+          <span data-tmpl="details"></span>
+        </div>
       </div>
     </div>
   </div>
