buck review changes
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -31,8 +31,8 @@
               <span id="penalties"></span>
             </div>
             <div class="d-flex justify-content-between align-items-center">
-              <span>[[[expired_bonds_pending_refund]]]</span>
-              <span id="expiredBondsPendingRefund"></span>
+              <span>[[[bonds_pending_refund]]]</span>
+              <span id="bondsPendingRefund"></span>
             </div>
           </div>
         </div>
