--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -30,6 +30,10 @@
               <span>[[[Penalties]]]</span>
               <span id="penalties"></span>
             </div>
+            <div class="d-flex justify-content-between align-items-center">
+              <span>[[[bonds_pending_refund]]]</span>
+              <span id="bondsPendingRefund"></span>
+            </div>
           </div>
         </div>
         <div class="flex-center p-4 brdrleft">
